[gd_scene load_steps=7 format=3 uid="uid://bxyniunebuqk0"]

[ext_resource type="Script" path="res://items/weapons/weapon_animation.gd" id="1_urvcc"]
[ext_resource type="Texture2D" uid="uid://c5e18o4icxfu1" path="res://assets/sprites/items/fc1034.png" id="2_23d27"]

[sub_resource type="Animation" id="Animation_neyx6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_fdrre"]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 0.023683),
"update": 0,
"values": [Vector2(0, 0), Vector2(200, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_asdvx"]
_data = {
"RESET": SubResource("Animation_neyx6"),
"attack": SubResource("Animation_fdrre")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dxrv5"]

[node name="WeaponAnimation" type="Node2D"]
script = ExtResource("1_urvcc")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_asdvx")
}

[node name="sprite" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(0.7, 0.7)
texture = ExtResource("2_23d27")
offset = Vector2(31.0348, -2.44109)
region_rect = Rect2(0, 0, 64, 64)

[node name="Area2D" type="Area2D" parent="sprite" groups=["player_weapon_hurtbox"]]
position = Vector2(40, -1.78814e-06)
rotation = -0.00670253
scale = Vector2(3.17347, 1.63634)
collision_layer = 8
collision_mask = 11

[node name="CollisionShape2D" type="CollisionShape2D" parent="sprite/Area2D" groups=["player_weapon_hurtbox"]]
position = Vector2(-2.7009, -0.0351085)
shape = SubResource("RectangleShape2D_dxrv5")

[connection signal="body_entered" from="sprite/Area2D" to="." method="_on_area_2d_body_entered"]
